New API hospital staff login
